--- a/build.gradle
+++ b/build.gradle
@@ -294,6 +294,18 @@ project(':gg-auth') {
     }
 }
 
+project(':gg-calendar-api') {
+    bootJar { enabled = false }
+    jar { enabled = true }
+    dependencies {
+        implementation project(':gg-data')
+        implementation project(':gg-repo')
+        implementation project(':gg-admin-repo')
+        implementation project(':gg-utils')
+        implementation project(':gg-auth')
+    }
+}
+
 project(':gg-repo') {
     bootJar { enabled = false }
     jar { enabled = true }
