[Feature] 빌드 및 테스트 설정 완료, 마이그레이션 완료

--- a/build.gradle
+++ b/build.gradle
@@ -326,3 +326,15 @@ project(':gg-utils') {
     dependencies {
     }
 }
+
+project(':gg-calendar-api') {
+    bootJar { enabled = false }
+    jar { enabled = true }
+    dependencies {
+        implementation project(':gg-data')
+        implementation project(':gg-repo')
+        implementation project(':gg-admin-repo')
+        implementation project(':gg-utils')
+        implementation project(':gg-auth')
+    }
+}
