[⚡️Feature] PublicSchedule 생성 API 통합테스트 작성 - req DTO작성 - controller, service작성 - DTO unit Test 완료 - Controller 테스트 한개 완료 - Entity tag 글자수 50으로 변경 - V4_calendar.sql TAG 쿼리문 변경

--- a/build.gradle
+++ b/build.gradle
@@ -257,6 +257,7 @@ project(':gg-pingpong-api') {
         implementation project(':gg-auth')
         implementation project(':gg-recruit-api')
         implementation project(':gg-agenda-api')
+        implementation project(':gg-calendar-api')
     }
 }
 
