--- a/.github/workflows/test-code-validation.yml
+++ b/.github/workflows/test-code-validation.yml
@@ -2,7 +2,7 @@ name: 💻 Test code validation
 
 on:
   pull_request:
-    branches: [ main, dev, recruit-dev]
+    branches: [main, dev]
 
 jobs:
   test:
