--- a/gg-utils/build.gradle
+++ b/gg-utils/build.gradle
@@ -48,7 +48,7 @@ integrationTestCoverageReport {
     getClassDirectories().setFrom(files(
             [project(':gg-data'), project(':gg-admin-repo'),
              project(':gg-repo'), project(':gg-pingpong-api'),
-             project(':gg-auth'), project(':gg-utils')].collect {
+             project(':gg-auth'), project(':gg-utils'), project(':gg-agenda-api'), project(':gg-calendar-api')].collect {
                 it.fileTree(dir: "${it.buildDir}/classes/java/main", exclude: jacocoExcludes)
             }
     ))
@@ -65,7 +65,7 @@ unitTestCoverageReport {
     getClassDirectories().setFrom(files(
             [project(':gg-data'), project(':gg-admin-repo'),
              project(':gg-repo'), project(':gg-pingpong-api'),
-             project(':gg-auth'), project(':gg-utils')].collect {
+             project(':gg-auth'), project(':gg-utils'), project(':gg-agenda-api'), project(':gg-calendar-api')].collect {
                 it.fileTree(dir: "${it.buildDir}/classes/java/main", exclude: jacocoExcludes)
             }
     ))
@@ -100,6 +100,8 @@ dependencies {
     testFixturesImplementation project(":gg-admin-repo")
     testFixturesImplementation project(":gg-pingpong-api")
     testFixturesImplementation project(":gg-recruit-api")
+    testFixturesImplementation project(":gg-agenda-api")
+    testFixturesImplementation project(":gg-calendar-api")
 
     jacocoAggregation(project(':gg-data'))
     jacocoAggregation(project(':gg-auth'))
@@ -107,6 +109,8 @@ dependencies {
     jacocoAggregation(project(':gg-admin-repo'))
     jacocoAggregation(project(':gg-pingpong-api'))
     jacocoAggregation(project(':gg-recruit-api'))
+    jacocoAggregation(project(':gg-agenda-api'))
+    jacocoAggregation(project(':gg-calendar-api'))
 }
 
 test {
