🐛 [Bug] CI에서 제공하는 CodeCov Report에서 Controller, Service로직이 잡히지 않는 버그 #1096 (#1098)

--- a/gg-utils/build.gradle
+++ b/gg-utils/build.gradle
@@ -48,7 +48,9 @@ integrationTestCoverageReport {
     getClassDirectories().setFrom(files(
             [project(':gg-data'), project(':gg-admin-repo'),
              project(':gg-repo'), project(':gg-pingpong-api'),
-             project(':gg-auth'), project(':gg-utils')].collect {
+             project(':gg-auth'), project(':gg-utils'),
+             project(':gg-recruit-api'), project(':gg-agenda-api'),
+             project(':gg-calendar-api')].collect {
                 it.fileTree(dir: "${it.buildDir}/classes/java/main", exclude: jacocoExcludes)
             }
     ))
@@ -65,7 +67,9 @@ unitTestCoverageReport {
     getClassDirectories().setFrom(files(
             [project(':gg-data'), project(':gg-admin-repo'),
              project(':gg-repo'), project(':gg-pingpong-api'),
-             project(':gg-auth'), project(':gg-utils')].collect {
+             project(':gg-auth'), project(':gg-utils'),
+             project(':gg-recruit-api'), project(':gg-agenda-api'),
+             project(':gg-calendar-api')].collect {
                 it.fileTree(dir: "${it.buildDir}/classes/java/main", exclude: jacocoExcludes)
             }
     ))
@@ -100,6 +104,8 @@ dependencies {
     testFixturesImplementation project(":gg-admin-repo")
     testFixturesImplementation project(":gg-pingpong-api")
     testFixturesImplementation project(":gg-recruit-api")
+    testFixturesImplementation project(":gg-agenda-api")
+    testFixturesImplementation project(":gg-calendar-api")
 
     jacocoAggregation(project(':gg-data'))
     jacocoAggregation(project(':gg-auth'))
@@ -107,6 +113,8 @@ dependencies {
     jacocoAggregation(project(':gg-admin-repo'))
     jacocoAggregation(project(':gg-pingpong-api'))
     jacocoAggregation(project(':gg-recruit-api'))
+    jacocoAggregation(project(':gg-agenda-api'))
+    jacocoAggregation(project(':gg-calendar-api'))
 }
 
 test {
