--- a/.github/workflows/checkstyle-validation.yml
+++ b/.github/workflows/checkstyle-validation.yml
@@ -1,9 +1,10 @@
 name: 👮Checkstyle validation
 
 on:
+  push:
+    branches: [ 1151-TestCodeValidation ]
   pull_request:
     branches: [ main, dev , recruit-dev ]
-
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
