--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -9,13 +9,8 @@ name: test-deploy
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ dev, 1151-feature-42api-모니터링스레드에작업 ]
   workflow_dispatch:
-
-env:
-  DOCKER_USER: ${{ secrets.DOCKER_USER }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  IMAGE_NAME: wken5577/test-migrate-server
 
 permissions:
   contents: read
@@ -40,12 +35,6 @@ jobs:
           cd ./gg-pingpong-api/src/main/resources
           echo "${{ secrets.MIGRATE_APPLICATION_YML }}" | base64 -d > application.yml
         shell: bash
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKER_USER }}
-          password: ${{ env.DOCKER_PASSWORD }}
 
       - name: Test with Gradle
         run: ./gradlew clean test
@@ -90,3 +79,7 @@ jobs:
       - name: Trigger Instance Refresh
         run: |
           aws autoscaling start-instance-refresh --cli-input-json file://config.json
+env:
+  DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  IMAGE_NAME: wken5577/test-migrate-server
