--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -9,7 +9,7 @@ name: test-deploy
 
 on:
   push:
-    branches: [ dev, 1151-feature-42api-모니터링스레드에작업 ]
+    branches: [ dev, recruit_recruit-dev, 1151-feature-42api-모니터링스레드에작업 ]
   workflow_dispatch:
 
 permissions:
