[FIX] test-deploy 수정

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,15 +1,8 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: test-deploy
 
 on:
   push:
-    branches: [ dev, recruit_recruit-dev, 1151-feature-42api-모니터링스레드에작업 ]
+    branches: [ dev, 1151-feature-42api-모니터링스레드에작업 ]
   workflow_dispatch:
 
 permissions:
