[FIX] 주석제거/ 파일 수정

--- a/.github/workflows/checkstyle-validation.yml
+++ b/.github/workflows/checkstyle-validation.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ 1151-feature-42api-모니터링스레드에작업 ]
   pull_request:
-    branches: [ main, dev , recruit-dev ]
+    branches: [ main, dev ]
 
 jobs:
   checkstyle:
