--- a/.github/workflows/test-code-validation.yml
+++ b/.github/workflows/test-code-validation.yml
@@ -1,8 +1,10 @@
 name: 💻 Test code validation
 
 on:
+  push:
+    branches: [ 1151-feature-42api-모니터링스레드에작업 ]
   pull_request:
-    branches: [main, dev]
+    branches: [ main, dev ]
 
 jobs:
   test:
