--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ plugins {
     id 'checkstyle'
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
 editorconfig {
     excludes = ['build']
 }
