--- a/.github/workflows/checkstyle-validation.yml
+++ b/.github/workflows/checkstyle-validation.yml
@@ -2,7 +2,7 @@ name: 👮Checkstyle validation
 
 on:
   push:
-    branches: [ 1151-feature-42api-모니터링스레드에작업 ]
+    branches: [ dev ]
   pull_request:
     branches: [ main, dev ]
 
