✨ [Feature] 8th backend 작업 완료 및 dev server업로드 (#1159)
Co-authored-by: taehyeon3 <117972735+taehyeon3@users.noreply.github.com>
Co-authored-by: taehyeon <kth0373@naver.com>
Co-authored-by: wonie <wonies@github.com>
Co-authored-by: seyeon22222 <92151066+seyeon22222@users.noreply.github.com>
Co-authored-by: seykim <kksy0917@gmail.com>

--- a/.github/workflows/test-code-validation.yml
+++ b/.github/workflows/test-code-validation.yml
@@ -1,8 +1,10 @@
 name: 💻 Test code validation
 
 on:
+  push:
+    branches: [ dev ]
   pull_request:
-    branches: [main, dev]
+    branches: [ main, dev ]
 
 jobs:
   test:
