--- a/.github/workflows/checkstyle-validation.yml
+++ b/.github/workflows/checkstyle-validation.yml
@@ -1,8 +1,10 @@
 name: 👮Checkstyle validation
 
 on:
+  push:
+    branches: [ dev ]
   pull_request:
-    branches: [ main, dev , recruit-dev]
+    branches: [ main, dev ]
 
 jobs:
   checkstyle:
